--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.9"
 license = {text = "BSD-2-Clause"}
 authors = [
-    {name = "Benjamin M. Gyori, Northeastern University", email = "b.gyori@northeastern.edu"}
+    {name = "Benjamin M. Gyori, Northeastern University", email = "b.gyori@northeastern.edu"},
     {name = "Oscar Ji, Northeastern University", email = "ji.kang@northeastern.edu"}
 ]
 keywords = ["bioregistry"]
